--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img id="logo" src="assets/img/MaReSticker.png" alt="MaRe Logo"/>
         <div id="mare">
             <h1 class="animate-red" id="maracatu">
-                Maaaa<span class="white">r</span><span>a</span><span>c</span><span>a</span><span>t</span><span>u</span>
+                Ma<span class="white">r</span><span>a</span><span>c</span><span>a</span><span>t</span><span>u</span>
             </h1>
             <h2 class="animate-blue" id="renascente">
                 Re<span>n</span><span>a</span><span>s</span><span>c</span><span class="white">e</span><span>n</span><span>t</span><span>e</span>
