--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
                     </ul>
                 </div>
                 <div id="img-slider">
-                    <img src="/assets/img/ima_96261a4.jpeg" alt="Mondscheingassenfest 2023" class="active">
-                    <img src="/assets/img/MaRe2.jpg" alt="10 Jahre MaRe">
-                    <img src="/assets/img/MaRe3.jpg" alt="Porgy & Bess">
-                    <img src="/assets/img/MaRe4.jpg" alt="MaRe Band">
+                    <img src="/mare/assets/img/ima_96261a4.jpeg" alt="Mondscheingassenfest 2023" class="active">
+                    <img src="/mare/assets/img/MaRe2.jpg" alt="10 Jahre MaRe">
+                    <img src="/mare/assets/img/MaRe3.jpg" alt="Porgy & Bess">
+                    <img src="/mare/assets/img/MaRe4.jpg" alt="MaRe Band">
                 </div>
             </div>
 
@@ -265,9 +265,9 @@
     <footer>
         <div class="social">
             <a>info@m-renascente.at</a>
-            <a href="https://www.facebook.com/MaracatuRenascente/" title="Maracatu Renascente on facebook"><img src="/assets/img/Facebook_Logo_Primary.png" alt="Facebook Link"></a>
-            <a href="https://www.instagram.com/mare_maracaturenascente/" title="Maracatu Renascente on Instagram"><img src="/assets/img/insta_icon.png" alt="Instagram Link"></a>
-            <a href="https://www.youtube.com/@maracaturenascente" title="Maracatu Renascente on YouTube"><img src="/assets/img/yt_icon.png" alt="YouTube Link"></a>
+            <a href="https://www.facebook.com/MaracatuRenascente/" title="Maracatu Renascente on facebook"><img src="/mare/assets/img/Facebook_Logo_Primary.png" alt="Facebook Link"></a>
+            <a href="https://www.instagram.com/mare_maracaturenascente/" title="Maracatu Renascente on Instagram"><img src="/mare/assets/img/insta_icon.png" alt="Instagram Link"></a>
+            <a href="https://www.youtube.com/@maracaturenascente" title="Maracatu Renascente on YouTube"><img src="/mare/assets/img/yt_icon.png" alt="YouTube Link"></a>
         </div>
         <div class="policy">
             <ul>
