--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li id="contact">Contact: <small>info@m-renascente.at</small></li>
         </ul>
     </nav>
-    <img id="logo" src="assets/img/MaReSticker.png" alt="MaRe Logo"/>
+    <img id="logo" src="/mare/assets/img/MaReSticker.png" alt="MaRe Logo"/>
     <header>
         
         <div id="mare">
@@ -304,10 +304,10 @@
                     </ul>
                 </div>
                 <div id="img-slider">
-                    <img src="/assets/img/ima_96261a4.jpeg" alt="Mondscheingassenfest 2023" class="active">
-                    <img src="/assets/img/MaRe2.jpg" alt="10 Jahre MaRe">
-                    <img src="/assets/img/MaRe3.jpg" alt="Porgy & Bess">
-                    <img src="/assets/img/MaRe4.jpg" alt="MaRe Band">
+                    <img src="/mare/assets/img/ima_96261a4.jpeg" alt="Mondscheingassenfest 2023" class="active">
+                    <img src="/mare/assets/img/MaRe2.jpg" alt="10 Jahre MaRe">
+                    <img src="/mare/assets/img/MaRe3.jpg" alt="Porgy & Bess">
+                    <img src="/mare/assets/img/MaRe4.jpg" alt="MaRe Band">
                 </div>
             </div>
 
@@ -341,7 +341,7 @@
             <h6>Abê, Alfaia, Vocals</h6>
             <p>Anna ist eine unglaublich quirlige Person, die jede Probe mit ihrer lustigen Art bereichert. Primär ist sie an der Alfaia zu finden, oft leiht sie uns aber auch ihre tolle Stimme für die eine oder andere Nummer. Spontane zweite oder dritte Stimmen singt sie dank ihrer Kreativität und ihrem Können mühelos und mit Freude. Anna hat Rhythmik studiert, spielt Gitarre und Kontrabass. Letzteren spielt sie in der Formation Wirrbel. Wirbel ist auch tatsächlich ein gutes Wort um Anna zu beschreiben: Sie strahlt und hat Energie wie ein kunterbunter Wirbelsturm.</p>
             </div>
-            <img src="/assets/img/profilfotos/anna.jpg" alt="Anna Rosenkranz" title="Anna Rosenkranz">
+            <img src="/mare/assets/img/profilfotos/anna.jpg" alt="Anna Rosenkranz" title="Anna Rosenkranz">
             
         </div>
         <div class="member">
@@ -350,7 +350,7 @@
                 <h6>Alfaia</h6>
                 <p>Daniel ist, wie er eben ist.</p>
             </div>
-            <img src="assets/img/MaReSticker.png" alt="MaRe Logo">
+            <img src="/mare/assets/img/MaReSticker.png" alt="MaRe Logo">
 
         </div>
         <div class="member">
@@ -365,7 +365,7 @@
                     Lieblingsgewässer (Donau) chillt, weiß er immer, welche Kinofilme gerade sehenswert sind und sendet die heißesten Konzert- und Partytipps in die Runde.
                 </p>
             </div>
-            <img src="/assets/img/profilfotos/david.jpg" alt="David Bergstötter" title="David Bergstötter">
+            <img src="/mare/assets/img/profilfotos/david.jpg" alt="David Bergstötter" title="David Bergstötter">
         </div>
         <div class="member">
             <div>
@@ -378,7 +378,7 @@
                     Die Band versorgt er nicht nur mit seinen tighten Rhythmen, sondern auch mit schwedischen Weingummi-Köstlichkeiten. 
                     Darüber freuen sich die MaRe-Schleckermäulchen genauso wie die hungrigen Mäuse aus dem Probekeller.</p>
             </div>
-            <img src="/assets/img/profilfotos/jordan.jpg" alt="Jordan Brusenbauch" title="Jordan Brusenbauch">
+            <img src="/mare/assets/img/profilfotos/jordan.jpg" alt="Jordan Brusenbauch" title="Jordan Brusenbauch">
         </div>
         <div class="member">
             <div>
@@ -390,7 +390,7 @@
                     „Eine Frage...“ – nichts bleibt bei Cabo ungeklärt. 
                     Die Mischung aus großem Know-How, Liebe fürs Detail, Humor und einer gehörigen Portion Bühnenpräsenz macht sie zu einem unverzichtbaren Mitglied von MaRe!</p>
             </div>
-            <img src="/assets/img/profilfotos/karin.jpg" alt="Karin Weinmeister" title="Karin Weinmeister">
+            <img src="/mare/assets/img/profilfotos/karin.jpg" alt="Karin Weinmeister" title="Karin Weinmeister">
         </div>
         <div class="member">
             <div>
@@ -402,7 +402,7 @@
                     Auch nach langer gemeinsamer Zeit schafft sie es trotz Job + Ausbildung noch ein integraler Bestandteil der Band zu sein und dabei auch noch allen ein 
                     Lächeln ins Gesicht zu zaubern.</p>
             </div>
-            <img src="/assets/img/profilfotos/lena.jpg" alt="Lena Kastner" title="Lena Kastner">
+            <img src="/mare/assets/img/profilfotos/lena.jpg" alt="Lena Kastner" title="Lena Kastner">
         </div>
         <div class="member">
             <div>
@@ -410,7 +410,7 @@
                 <h6>Alfaia</h6>
                 <p>Nesli is afoch a geile Sau!</p>
             </div>
-            <img src="assets/img/MaReSticker.png" alt="MaRe Logo">
+            <img src="/mare/assets/img/MaReSticker.png" alt="MaRe Logo">
 
         </div>
         <div class="member">
@@ -426,7 +426,7 @@
                     Er ist der zukünftige Band-Physiotherapeut und arbeitet schon jetzt unermüdlich daran etwaige Verspannungen innerhalb der Band zu lösen.
                 </p>
             </div>
-            <img src="/assets/img/profilfotos/nico.jpg" alt="Nicolai Toth" title="Nicolai Toth">
+            <img src="/mare/assets/img/profilfotos/nico.jpg" alt="Nicolai Toth" title="Nicolai Toth">
         </div>
         <div class="member">
             <div>
@@ -438,7 +438,7 @@
                     Als Bandleader und künstlerischer Leiter widmet er sich der Gruppe mit Hirn und Herz und gibt auf die Mitglieder acht wie ein Hirtenhund auf seine Herde. Er vergisst nie die Wichtigkeit einer gesunden Bandatmosphäre und macht sich viele Gedanken über das Wohlergehen der Band und ihrer Mitglieder. Warmherzig und mit viel Schmäh leitet er unsere Proben, erheitert die Stimmung und behält trotzdem den Fokus.
                     Neben seinem Beruf als Schlagzeuger, DJ und Pädagoge ist er hauptberuflich Pata!</p>
             </div>
-            <img src="/assets/img/profilfotos/pata.jpg" alt="Patrick Huter" title="Patrick Huter">
+            <img src="/mare/assets/img/profilfotos/pata.jpg" alt="Patrick Huter" title="Patrick Huter">
         </div>
         <div class="member">
             <div>
@@ -448,7 +448,7 @@
                     Paul ist wahres Multitalent, er spielt Alfaia, Gonguê, Abê, Cavaquinho und Bass und noch dazu kann er auch gut singen. Zur Band kam er schon vor längerer Zeit im Jahr 2012. Das Schönste für Paul ist es, jeden Montag mit einer Gruppe großartiger Menschen packende Musik zu spielen und gemeinsam mit ihnen in den Flow des Maracatu zu kommen. Ihn zeichnet seine herzliche, umsorgende, gewissenhafte und ehrliche Art aus. Paul hat immer ein offenes Ohr, versorgt die Band während den Proben mit wichtigen Nährstoffen in Form von Manner Schnitten und lässt die Sau zum richtigen Zeitpunkt raus. Und wenn es manchmal Aufgaben in der Band gibt, die keiner so richtig gern machen will, kümmert sich oft Paul um sie.
                 </p>
             </div>
-            <img src="/assets/img/profilfotos/paul.jpg" alt="Paul Gulewycz" title="Paul Gulewycz">
+            <img src="/mare/assets/img/profilfotos/paul.jpg" alt="Paul Gulewycz" title="Paul Gulewycz">
         </div>
         <div class="member">
             <div>
@@ -458,7 +458,7 @@
                     Sophie ist unser Urgestein an der Alfaia, weshalb auch die kompliziertesten Beats für sie ein Kinderspiel sind. Und auch dazu singen kann sie problemlos. Nebenbei versorgt sie uns auch immer wieder mit wissenschaftlichen Inputs zu Maracatu und ist das Gewissen der Band. 
                     „MaRe bedeutet für mich Zeit mit Menschen, die ich liebe zu verbringen und zugleich mit ihnen etwas Kreatives und Produktives zu machen“, sagt sie über die Band.</p>
             </div>
-            <img src="/assets/img/profilfotos/sophie.jpg" alt="Sophie Zehetmayer" title="Sophie Zehetmayer">
+            <img src="/mare/assets/img/profilfotos/sophie.jpg" alt="Sophie Zehetmayer" title="Sophie Zehetmayer">
         </div>
         <blockquote>
             <h4>You are motivated</h4>
@@ -481,9 +481,9 @@
     <footer>
         <div class="social">
             <a>info@m-renascente.at</a>
-            <a href="https://www.facebook.com/MaracatuRenascente/" title="Maracatu Renascente on facebook"><img src="/assets/img/Facebook_Logo_Primary.png" alt="Facebook Link"></a>
-            <a href="https://www.instagram.com/mare_maracaturenascente/" title="Maracatu Renascente on Instagram"><img src="/assets/img/insta_icon.png" alt="Instagram Link"></a>
-            <a href="https://www.youtube.com/@maracaturenascente" title="Maracatu Renascente on YouTube"><img src="/assets/img/yt_icon.png" alt="YouTube Link"></a>
+            <a href="https://www.facebook.com/MaracatuRenascente/" title="Maracatu Renascente on facebook"><img src="/mare/assets/img/Facebook_Logo_Primary.png" alt="Facebook Link"></a>
+            <a href="https://www.instagram.com/mare_maracaturenascente/" title="Maracatu Renascente on Instagram"><img src="/mare/assets/img/insta_icon.png" alt="Instagram Link"></a>
+            <a href="https://www.youtube.com/@maracaturenascente" title="Maracatu Renascente on YouTube"><img src="/mare/assets/img/yt_icon.png" alt="YouTube Link"></a>
         </div>
         <div class="policy">
             <ul class="nav">
