--- a/index.html
+++ b/index.html
@@ -494,6 +494,6 @@
 
     </footer>
     <script  src="https://code.jquery.com/jquery-3.7.1.min.js"   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="  crossorigin="anonymous"></script>
-    <script src="assets/script.js"></script> 
+    <script src="mare/assets/script.js"></script> 
 </body>
 </html>
