--- a/indexEN.html
+++ b/indexEN.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maracatu Renascente</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="mare/assets/style.css">
 </head>
 <body id="en">
     <div id="hamburger">
@@ -23,7 +23,7 @@
             <li id="language"><a href="index.html">DE</a></li>
         </ul>
     </nav>
-    <img id="logo" src="assets/img/MaReSticker.png" alt="MaRe Logo"/>
+    <img id="logo" src="mare/assets/img/MaReSticker.png" alt="MaRe Logo"/>
     <header>
         
         <div id="mare">
@@ -52,7 +52,7 @@
             <div class="video">
                 <!--iframe src="https://www.youtube.com/embed/8zDg9JkjIOo?si=vRyguBH7KBD19tk4?&mute=1&autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; mute; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe-->
                 <video controls autoplay muted loop>
-                    <source src="/assets/img/200124_MaRe@porgy_kurz.mp4" type="video/mp4">
+                    <source src="mare/assets/img/200124_MaRe@porgy_kurz.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video> 
             </div>
@@ -293,10 +293,10 @@
                     </ul>
                 </div>
                 <div id="img-slider">
-                    <img src="/assets/img/ima_96261a4.jpeg" alt="Mondscheingassenfest 2023" class="active">
-                    <img src="/assets/img/MaRe2.jpg" alt="10 Jahre MaRe">
-                    <img src="/assets/img/MaRe3.jpg" alt="Porgy & Bess">
-                    <img src="/assets/img/MaRe4.jpg" alt="MaRe Band">
+                    <img src="mare/assets/img/ima_96261a4.jpeg" alt="Mondscheingassenfest 2023" class="active">
+                    <img src="mare/assets/img/MaRe2.jpg" alt="10 Jahre MaRe">
+                    <img src="mare/assets/img/MaRe3.jpg" alt="Porgy & Bess">
+                    <img src="mare/assets/img/MaRe4.jpg" alt="MaRe Band">
                 </div>
             </div>
 
@@ -327,7 +327,7 @@
             <h6>Abê, Alfaia, Vocals</h6>
             <p>Anna is an incredibly lively person who enriches every rehearsal with her funny nature. She can primarily be found on the Alfaia, but she often lends us her great voice for one number or another. Thanks to her creativity and skill, she sings spontaneous second or third voices effortlessly and with joy. Anna studied rhythm and plays guitar and double bass. She plays the latter in the formation Wirrbel. Vortex is actually a good word to describe Anna: she shines and has energy like a colorful whirlwind.</p>
             </div>
-            <img src="/assets/img/profilfotos/anna.jpg" alt="Anna Rosenkranz" title="Anna Rosenkranz">
+            <img src="mare/assets/img/profilfotos/anna.jpg" alt="Anna Rosenkranz" title="Anna Rosenkranz">
             
         </div>
         <div class="member">
@@ -341,7 +341,7 @@
                     Self-irony and humor are part of his unique personality.
                 </p>
             </div>
-            <img src="assets/img/MaReSticker.png" alt="MaRe Logo">
+            <img src="mare/assets/img/MaReSticker.png" alt="MaRe Logo">
 
         </div>
         <div class="member">
@@ -356,7 +356,7 @@
                     If he's chilling on his favorite body of water (the Danube), he always knows which movies are worth seeing and sends out the hottest concert and party tips.
                 </p>
             </div>
-            <img src="/assets/img/profilfotos/david.jpg" alt="David Bergstötter" title="David Bergstötter">
+            <img src="mare/assets/img/profilfotos/david.jpg" alt="David Bergstötter" title="David Bergstötter">
         </div>
         <div class="member">
             <div>
@@ -495,9 +495,9 @@
     <footer>
         <div class="social">
             <a>maracatu.renascente@gmail.com</a>
-            <a href="https://www.facebook.com/MaracatuRenascente/" title="Maracatu Renascente on facebook"><img src="/assets/img/Facebook_Logo_Primary.png" alt="Facebook Link"></a>
-            <a href="https://www.instagram.com/mare_maracaturenascente/" title="Maracatu Renascente on Instagram"><img src="/assets/img/insta_icon.png" alt="Instagram Link"></a>
-            <a href="https://www.youtube.com/@maracaturenascente" title="Maracatu Renascente on YouTube"><img src="/assets/img/yt_icon.png" alt="YouTube Link"></a>
+            <a href="https://www.facebook.com/MaracatuRenascente/" title="Maracatu Renascente on facebook"><img src="mare/assets/img/Facebook_Logo_Primary.png" alt="Facebook Link"></a>
+            <a href="https://www.instagram.com/mare_maracaturenascente/" title="Maracatu Renascente on Instagram"><img src="mare/assets/img/insta_icon.png" alt="Instagram Link"></a>
+            <a href="https://www.youtube.com/@maracaturenascente" title="Maracatu Renascente on YouTube"><img src="mare/assets/img/yt_icon.png" alt="YouTube Link"></a>
         </div>
         <div class="policy">
             <ul class="nav">
@@ -508,6 +508,6 @@
 
     </footer>
     <script  src="https://code.jquery.com/jquery-3.7.1.min.js"   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="  crossorigin="anonymous"></script>
-    <script src="assets/script.js"></script> 
+    <script src="mare/assets/script.js"></script> 
 </body>
 </html>
