--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li for="band" class="more-info-trigger">Band</li>
             <li for="home"><a for="home" href="#weplayed">Konzerte</a></li>
             <li id="contact">Kontakt: <small>maracatu.renascente@gmail.com</small></li>
-            <li id="language"><a href="mare/indexEN.html">EN</a></li>
+            <li id="language"><a href="indexEN.html">EN</a></li>
         </ul>
     </nav>
     <img id="logo" src="/mare/assets/img/MaReSticker.png" alt="MaRe Logo"/>
